# mini-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.cuda  devcontainer.json
.github/workflows/: release.yml
src/mini_agent/: __init__.py  agent.py  cli.py  config.py  display.py  errors.py  models.py  sessions.py  tools.py
src/mini_agent/agent/: agent.py  skills.py  todos.py  tools.py
src/mini_agent/cli/: main.py  models.py  prompting.py  runtime.py  sessions.py  token.py  token_usage.py
src/mini_agent/cli/display/: __init__.py  completion.py  diff.py  picker.py  printing.py  theme.py  toolbar.py
src/mini_agent/display/: __init__.py  completion.py  diff.py  printing.py
src/starter/: __init__.py
